# 2022-2023-project-3-harfang3d-binding-Project-2-group

./: .gitignore  readme.css  readme.md  tasks.md
Documents/Management/: KPI.md  Project_Calendar.md  Project_Communication_Plan.md
Documents/Reports/: harfang3d--meeting--01-03-2023.md  harfang3d--meeting--03-01-2023.md  harfang3d--meeting--17-01-2023.md  recap-01_03-to-01_13.md  recap-week_3.md  recap-week_4.md  recap-week_5.md  recap-week_6.md  recap-week_7  recap-week_7.md  recap-weeks_1_2.md
Documents/Specification/: Functional_Specification.md  Technical_Specification.md  functionnal.md  technical.md
Documents/Tests/: Test_Case.md  Test_Plan.md  test-cases.md  test-plan.md
Documents/research/: client.md  intro.md  product.md  research_document.md
FABGen/: genSL.py
FABGen/input/: assert.cpp  assert.h  ctype.cpp  ctype.h  math.cpp  math.h  string.cpp  string.h
FABGen/lang/: fsharp.py
FABGen/lib/fsharp/: std.py  stl.py
FABGen/output/: bind_CPython.cpp  bind_CPython.h  bind_Lua.cpp  bind_Lua.h
FABgen/: .travis.yml  bind.py  test_bind.py  tests.py
FABgen/examples/: harfang.py
FABgen/input/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
FABgen/lang/: go.py
FABgen/lib/: __init__.py  stl.py
FABgen/lib/cMakeBuild/: .gitignore  CMakeLists.txt  gen_DLL.bat  gen_DYLIB.sh  var_store.cmake
FABgen/lib/go/: std.py  stl.py
FABgen/output/: bind_FSharp.cpp  bind_FSharp.fs  bind_FSharp.h  fSharpCode.fsproj  output.fs
FABgen/tests/: arg_out.py  basic_type_exchange.py  cpp_exceptions.py  enumeration.py  extern_type.py  function_call.py  method_route_feature.py  repr.py  return_nullptr_as_none.py  shared_ptr.py  shared_ptr_default_comparison.py  std_function.py  std_future.py  struct_bitfield_member_access.py  struct_default_comparison.py  struct_inheritance_cast.py  struct_instantiation.py  struct_member_access.py  struct_method_call.py  struct_nesting.py  struct_operator_call.py  struct_static_const_member_access.py  template_struct_nesting.py  variable_access.py
Test/: basis.fs  basis.h  converter.py
dev/: basis.cpp  basis.fs  basis.h  converter.py
python/: converter.py
test/cMakeBuild/: CMakeCache.txt  CMakeLists.txt  gen_DYLIB.sh  var_store.cmake
vector/: .gitignore  output.fs  vector.fs  vector2.cpp  vector2.h  vector3.cpp
vector/cMakeBuild/: CMakeLists.txt
vector/cMakeBuild2/: CMakeLists.txt
vector/fSharpCode/: .gitignore  Program.fs  Program.fsx  fSharpCode.fsproj  test.bat  test.sh
vector/fsharpwrapper/src/NativeLib/: Library.fs  NativeCallable.fs  NativeLib.fsproj  NativeLibrary.fs  nuget.config
vector/fsharpwrapper/src/NativeLib/consoleC++/: consoleC++.sln
vector/fsharpwrapper/src/NativeLib/consoleC++/consoleC++/: Main.cpp  NativeLib.h  consoleC++.cpp  consoleC++.vcxproj  consoleC++.vcxproj.filters
